--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
 
     <build>
